--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Webpack App</title>
-    </head>
-    <body>
-        <div class="container">
-            <form action="" method="POST" id="form" class="row g-3 p-4">
-                <div class="col">
-                    <label for="inputPasswrss-url" class="visually-hidden">RSS Address Link</label>
-                    <input type="text" name="url" class="form-control" id="rss-url" placeholder="Link to RSS" required>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RSS Aggregator</title>
+</head>
+<body class="d-flex flex-column min-vh-100">
+    <main class="flex-grow-1">
+        <section class="container-fluid bg-dark p-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-lg-8 mx-auto text-white">
+                        <h1 class="display-3 mb-0 text-center">RSS Aggregator</h1>
+                        <p class="lead text-center">A convinient way to stay up to date!</p>
+                        <form action="" method="POST" id="form" class="rss-form text-body">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="inputPasswrss-url" class="visually-hidden">RSS Address Link</label>
+                                    <input type="text" name="url" class="form-control" id="rss-url" placeholder="Link to RSS" required>
+                                </div>
+                                <div class="col-auto">
+                                    <button type="submit" id="form-submit" class="btn btn-primary mb-3">Add RSS Feed</button>
+                                </div>
+                            </div>
+                        </form>
+                        <p class="feedback m-0 small"></p>
+                    </div>
                 </div>
-                <div class="col-auto">
-                    <button type="submit" id="form-submit" class="btn btn-primary mb-3">Add RSS</button>
-                </div>
-            </form>
-            <p class="feedback m-0 position-absolute small text-danger"></p>
-        </div>
-    </body>
-    
+            </div>
+        </section>
+    </main>
+</body>
 </html>
