add i18next, all text is dynamic now

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RSS Aggregator</title>
+    <title></title>
 </head>
 <body class="d-flex flex-column min-vh-100">
     <main class="flex-grow-1">
@@ -12,20 +12,20 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-white">
-                        <h1 class="display-3 mb-0 text-center">RSS Aggregator</h1>
-                        <p class="lead text-center">A convinient way to stay up to date!</p>
+                        <h1 class="title display-3 mb-0 text-center"></h1>
+                        <p class="subtitle lead text-center"></p>
                         <form action="" method="POST" id="form" class="rss-form text-body">
                             <div class="row">
                                 <div class="col">
-                                    <label for="inputPasswrss-url" class="visually-hidden">RSS Address Link</label>
-                                    <input type="text" name="url" class="form-control" id="rss-url" placeholder="Link to RSS" required>
+                                    <label for="inputPasswrss-url" class="input-label visually-hidden"></label>
+                                    <input type="text" name="url" class="form-control" id="rss-url" placeholder="" required>
                                 </div>
                                 <div class="col-auto">
-                                    <button type="submit" id="form-submit" class="btn btn-primary mb-3">Add RSS Feed</button>
+                                    <button type="submit" id="form-submit" class="btn btn-primary mb-3"></button>
                                 </div>
                             </div>
                         </form>
-                        <p class="feedback m-0 small"></p>
+                        <p class="feedback position-absolute m-0 small"></p>
                     </div>
                 </div>
             </div>
