--- a/index.html
+++ b/index.html
@@ -14,18 +14,10 @@
             <div class="col-md-10 col-lg-8 mx-auto text-white">
               <h1 class="title display-3 mb-0 text-center"></h1>
               <p class="subtitle lead text-center"></p>
-              <form
-                action=""
-                method="POST"
-                id="form"
-                class="rss-form text-body"
-              >
+              <form action="" method="POST" id="form" class="rss-form text-body">
                 <div class="row">
                   <div class="col">
-                    <label
-                      for="inputPasswrss-url"
-                      class="input-label visually-hidden"
-                    ></label>
+                    <label for="inputPasswrss-url" class="input-label visually-hidden"></label>
                     <input
                       type="text"
                       name="url"
@@ -36,15 +28,39 @@
                     />
                   </div>
                   <div class="col-auto">
-                    <button
-                      type="submit"
-                      id="form-submit"
-                      class="btn btn-primary mb-3"
-                    ></button>
+                    <button type="submit" id="form-submit" class="btn btn-primary mb-3"></button>
                   </div>
                 </div>
               </form>
               <p class="feedback position-absolute m-0 small"></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="container p-5">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="feeds">
+              <h2 class="feeds__title">Feeds</h2>
+              <ul class="feeds__list list-group">
+                <li class="feeds__item feed list-group-item">
+                  <h3 class="feed__title h5 m-0">Feed 1 Title</h3>
+                  <p class="feed__description m-0 small text-black-50">Feed 1 description</p>
+                </li>
+                <li class="feeds__item list-group-item">
+                  <h3 class="feed__title h5 m-0">Feed 2 Title</h3>
+                  <p class="feed__description m-0 small text-black-50">Feed 2 description</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div class="posts">
+              <h2 class="posts__title">Posts</h2>
+              <ul class="posts__list list-group border-0 rounded-0">
+                <li class="posts__item list-group-item border-0"><a href="" rel="noopener noreferrer" target="_blank">Post item 1</a></li>
+                <li class="posts__item list-group-item border-0"><a href="" rel="noopener noreferrer" target="_blank">Post item 2</a></li>
+              </ul>
             </div>
           </div>
         </div>
