feeds and posts now render on page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <main class="flex-grow-1">
-      <section class="container-fluid bg-dark p-5">
+      <section class="form-section container-fluid bg-dark p-5">
         <div class="container">
           <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto text-white">
@@ -41,26 +41,14 @@
         <div class="row">
           <div class="col-md-4">
             <div class="feeds">
-              <h2 class="feeds__title">Feeds</h2>
-              <ul class="feeds__list list-group">
-                <li class="feeds__item feed list-group-item">
-                  <h3 class="feed__title h5 m-0">Feed 1 Title</h3>
-                  <p class="feed__description m-0 small text-black-50">Feed 1 description</p>
-                </li>
-                <li class="feeds__item list-group-item">
-                  <h3 class="feed__title h5 m-0">Feed 2 Title</h3>
-                  <p class="feed__description m-0 small text-black-50">Feed 2 description</p>
-                </li>
-              </ul>
+              <h2 class="feeds__title"></h2>
+              <ul class="feeds__list list-group"></ul>
             </div>
           </div>
           <div class="col-md-8">
             <div class="posts">
-              <h2 class="posts__title">Posts</h2>
-              <ul class="posts__list list-group border-0 rounded-0">
-                <li class="posts__item list-group-item border-0"><a href="" rel="noopener noreferrer" target="_blank">Post item 1</a></li>
-                <li class="posts__item list-group-item border-0"><a href="" rel="noopener noreferrer" target="_blank">Post item 2</a></li>
-              </ul>
+              <h2 class="posts__title"></h2>
+              <ul class="posts__list list-group border-0 rounded-0"></ul>
             </div>
           </div>
         </div>
