--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
       <section class="container p-5">
         <div class="row">
           <div class="col-md-4">
-            <div class="feeds">
-              <h2 class="feeds__title"></h2>
-              <ul class="feeds__list list-group"></ul>
-            </div>
+            <div class="feeds"></div>
           </div>
           <div class="col-md-8">
             <div class="posts">
