--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title></title>
   </head>
   <body class="d-flex flex-column min-vh-100">
+    <div
+      class="modal fade"
+      id="modal"
+      tabindex="-1"
+      aria-labelledby="modalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modalLabel">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <a href="#" rel="noopener noreferrer" target="_blank" class="btn btn-primary">Save changes</a>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <main class="flex-grow-1">
       <section class="form-section container-fluid bg-dark p-5">
         <div class="container">
