add aria-label attr to input

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                     <input
                       type="text"
                       name="url"
+                      aria-label="url"
                       class="form-control"
                       id="rss-url"
                       placeholder=""
