add input example for ui

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
                     />
                   </div>
                   <div class="col-auto">
-                    <button type="submit" id="form-submit" class="btn btn-primary mb-3"></button>
+                    <button type="submit" id="form-submit" class="btn btn-primary mb-0"></button>
                   </div>
                 </div>
               </form>
+              <p class="example mt-2 mb-0 text-muted"></p>
               <p class="feedback position-absolute m-0 small"></p>
             </div>
           </div>
